update to springboot3 for native image